--- a/src/order/Order.css
+++ b/src/order/Order.css
@@ -3,10 +3,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 8px 16px;
+  padding: 16px;
   background: white;
   display: flex;
   border-top: 1px solid rgb(234, 234, 234);
+  box-shadow: 0 -2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .Order button {
@@ -28,10 +29,15 @@
 .ValidateOrder .confirm-order,
 .ValidateOrder .cancel-order,
 .OrderConfirmed .back-home {
+  position: relative;
   background: white;
   padding: 8px 16px;
   display: flex;
   border-top: 1px solid rgb(234, 234, 234);
+}
+
+.ValidateOrder .set-address {
+  border-top: none;
 }
 
 .ValidateOrderAddress .set-address {
@@ -95,4 +101,12 @@
 .OrderConfirmed .thanks {
   margin: 0;
   padding: 16px;
+}
+
+.modify-address {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  bottom: 8px;
+  width: 48px;
 }
